--- a/src/Calculator/Resources/en-US/CEngineStrings.resw
+++ b/src/Calculator/Resources/en-US/CEngineStrings.resw
@@ -517,4 +517,8 @@
     <value>2^</value>
     <comment>{Locked}The string that represents the function</comment>
   </data>
+  <data name="LogBaseX" xml:space="preserve">
+    <value>logx</value>
+    <comment>{Locked}The string that represents the function</comment>
+  </data>
 </root>
