--- a/src/Calculator/Resources/en-US/Resources.resw
+++ b/src/Calculator/Resources/en-US/Resources.resw
@@ -3387,19 +3387,19 @@
     <value>L</value>
     <comment>{Locked}This is the character that should trigger this button. Note that it is a character and not a key, so it does not come from the Windows::System::VirtualKey enum.</comment>
   </data>
-  <data name="trigTextBlock.Text" xml:space="preserve">
+  <data name="trigButton.Text" xml:space="preserve">
     <value>TRIG</value>
     <comment>Displayed on the button that contains a flyout for the trig functions in scientific mode.</comment>
   </data>
-  <data name="functionTextBlock.Text" xml:space="preserve">
+  <data name="funcButton.Text" xml:space="preserve">
     <value>FUNCTION</value>
     <comment>Displayed on the button that contains a flyout for the general functions in scientific mode.</comment>
   </data>
-    <data name="bitwiseTextBlock.Text" xml:space="preserve">
+    <data name="bitwiseButton.Text" xml:space="preserve">
     <value>BITWISE</value>
     <comment>Displayed on the button that contains a flyout for the bitwise functions in programmer mode.</comment>
   </data>
-    <data name="bitShiftTextBlock.Text" xml:space="preserve">
+    <data name="bitShiftButton.Text" xml:space="preserve">
     <value>BIT SHIFT</value>
     <comment>Displayed on the button that contains a flyout for the bit shift functions in programmer mode.</comment>
   </data>
