Change the programmer mod to be percent

--- a/src/Calculator/Resources/en-US/CEngineStrings.resw
+++ b/src/Calculator/Resources/en-US/CEngineStrings.resw
@@ -549,4 +549,8 @@
     <value>cuberoot</value>
     <comment>{Locked}The string that represents the function</comment>
   </data>
+  <data name="ProgrammerMod" xml:space="preserve">
+    <value>%</value>
+    <comment>{Locked}The string that represents the function</comment>
+  </data>
 </root>
